--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html>
 <head>
 	<title>Visual Melody</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="paper-full.min.js"></script>
-	<script type="text/paperscript" canvas="myCanvas"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
+
+	<script type="text/paperscript" canvas="myCanvas">
+	function onKeyDown(event) {
+	var maxPoint = new Point(view.size.width, view.size.height);
+	var randomPoint = Point.random();
+	var point = maxPoint * randomPoint;
+	new Path.Circle(point, 10).fillColor = "blue";
+	}
+
+	</script>
+
 </head>
 <body>
+
 	<canvas id="myCanvas" resize></canvas>
-</body>
+
+</body>	
 </html>
