--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Visual Melody</title>
 	<script type="text/javascript" src="paper-full.min.js"></script>
 	<script type="text/javascript" src="howler.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<script type="text/paperscript" canvas="myCanvas">
@@ -214,7 +215,13 @@
 </head>
 <body>
 
+	
 	<canvas id="myCanvas" resize></canvas>
+
+	<div class="instruction-container">
+  		<div class="instruction-item"><h1>VISUAL MELODY</h1><p>Press your keyboard to create sounds.</p></div>
+	</div>
+
 
 </body>	
 </html>
